--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 :root {
-    --fuente-primaria: "Open Sans", sans-serif;
-    --fuente-secundaria: "PT Sans", sans-serif;
+    --fuente-Parrafos: "Open Sans", sans-serif;
+    --fuente-Heading: "PT Sans", sans-serif;
+    --primario: #784d3c;
+    --blanco: #fff;
+    --negro: #000;
+    --gris: #e1e1e1;
 }
 
 html {
@@ -16,8 +20,149 @@ html {
 }
 
 body {
-    font-family: var(--fuente-primaria);
+    font-family: var(--fuente-Parrafos);
+    font-size: 1.6rem;
+    line-height: 2;
+}
+
+/*Globales*/
+.contenedor {
+    max-width: 120%;
+    width: 90%;
+    margin: 0 auto;
+}
+
+a {
+    text-decoration: none
+}
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: var(--fuente-Heading);
+}
+
+h1 {
+    font-size: 4.8rem;
+}
+
+h2 {
+    font-size: 4rem;
+}
+
+h3 {
+    font-size: 3.2rem;
+}
+
+h4 {
+    font-size: 2.8rem;
+}
+
+img {
+    max-width: 100%;
+}
+
+/*Utilidades*/
+.no-margin {
+    margin: 0;
+}
+
+.no-padding {
+    padding: 0;
+}
+
+.centrar-texto {
+    text-align: center;
+}
+
+/*Header*/
+.header {
+    background-image: url(../img/banner.jpg);
+    height: 60rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.header__texto {
+    color: var(--blanco);
+    margin-top: 5rem;
+}
+
+@media(min-width: 768px) {
+    .header__texto {
+        margin-top: 15rem;
+    }
+}
+
+@media(min-width: 768px) {
+    .nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.logo {
+    color: var(--blanco);
+}
+
+.logo__span {
     font-weight: bold;
-    font-size: 3.8rem;
-    line-height: 1.5;
+}
+
+@media(min-width: 768px) {
+    .navblog {
+        display: flex;
+        gap: 2rem;
+    }
+}
+
+.navblog__enlace {
+    color: var(--blanco);
+    display: block;
+    text-align: center;
+    font-size: 1.8rem;
+}
+
+@media(min-width: 768px) {
+    .contenido-principal {
+        display: grid;
+        grid-template-columns: 1.5fr 1fr;
+        column-gap: 4rem;
+    }
+}
+
+.entrada {
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+
+.entrada:nth-child(4) {
+    border: none;
+    margin-bottom: 0;
+}
+
+.boton {
+    display: block;
+    color: var(--blanco);
+    font-family: var(--fuente-Heading);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 2rem;
+    border-radius: 1rem;
+}
+
+@media(min-width: 768px) {
+    .boton {
+        display: inline-block;
+    }
+}
+
+.boton--primario {
+    background-color: var(--negro);
 }
